# vokselis_fork_without_nightly

./: .gitignore  Cargo.toml  README.md
examples/bonsai/: Cargo.toml
examples/bonsai/src/: main.rs  raycast.rs
examples/invoke-bonsai/: Cargo.toml
examples/invoke-bonsai/src/: main.rs  raycast.rs
examples/invoke-xor/: Cargo.toml
examples/invoke-xor-single/: Cargo.toml
examples/invoke-xor-single/src/: main.rs  raycast.rs  xor_compute.rs
examples/invoke-xor-tile/: Cargo.toml
examples/invoke-xor-tile/src/: main.rs  raycast.rs  xor_compute.rs
examples/invoke-xor/src/: main.rs  raycast.rs  xor_compute.rs
examples/invoke_triangle/: Cargo.toml
examples/invoke_triangle/src/: main.rs
examples/triangle/: Cargo.toml
examples/triangle/src/: main.rs
examples/xor_single/: Cargo.toml
examples/xor_single/src/: main.rs  raycast.rs
examples/xor_tile/: Cargo.toml
examples/xor_tile/src/: main.rs  raycast.rs  xor_compute.rs
invoke-selis/: Cargo.toml
invoke-selis/src/: camera.rs  context.rs  lib.rs
invoke-selis/src/context/: hdr_backbuffer.rs  present_pipeline.rs  screenshot.rs  volume_texture.rs
invoke-selis/src/context/pipelines/: basic_with_camera.rs
invoke-selis/src/utils/: input.rs  mod.rs  recorder.rs
shaders/: present.wgsl  raycast_compute.wgsl  raycast_naive.wgsl  xor.wgsl
src/: lib.rs  main.rs  raycast.rs
src/vokselis/: camera.rs  context.rs  mod.rs
src/vokselis/context/: global_ubo.rs  hdr_backbuffer.rs  present_pipeline.rs  screenshot.rs  volume_texture.rs
src/vokselis/context/pipelines/: basic_with_camera.rs
src/vokselis/utils/: mod.rs  recorder.rs
