[package]
name = "voksel"
version = "0.1.0"
edition = "2021"

[dependencies]
bytemuck = { version = "1.7", features = ["derive"] }
chrono = "0.4"
color-eyre = "0.6"
crossbeam-channel = "0.5"
glam = { version = "0.23", features = ["bytemuck"] }
env_logger = "0.10"
png = "0.17"
pollster = "0.3"
wgpu = "0.14"
winit = "0.28"
