[workspace]
members = [
    "examples/bonsai",
    "examples/triangle",
    "examples/xor_single",
    "examples/xor_tile",
]

[workspace.dependencies]
bytemuck = { version = "1.7", features = ["derive"] }
wgpu = "0.18"
winit = { version = "0.29", default-features = false, features = ["rwh_05", "x11", "wayland", "wayland-dlopen"] }

[package]
name = "vokselis"
version = "0.1.0"
edition = "2021"
authors = ["Alex Komissarov <k.a.komissar@gmail.com>"]
license = "MIT"
description = "Vokselis project but for the latest version of wgpu."
repository = "https://github.com/pudnax/vokselis/"
readme = "README.md"
keywords = ["graphics", "voxels", "wgpu", "shaders", "creative"]
exclude = [".gitignore", "examples", ".github"]
categories = ["graphics", "rendering"]

[lib]

[dependencies]
bytemuck = { workspace = true }
env_logger = "0.10"
glam = { version = "0.24", features = ["bytemuck"] }
pollster = "0.3"
wgpu = { workspace = true }
winit = { workspace = true }
