[package]
name = "invoke-selis"
version = "0.1.0"
edition = "2021"
authors = ["Alex Komissarov <k.a.komissar@gmail.com>"]
license = "MIT"
description = "Vokselis project but for the latest version of wgpu."
repository = "https://github.com/pudnax/vokselis/"
readme = "README.md"
keywords = ["graphics", "voxels", "wgpu", "shaders", "creative"]
exclude = [".gitignore", "examples", ".github"]
categories = ["graphics", "rendering"]

[lib]

[dependencies]
bytemuck = { version = "1.7", features = ["derive"] }
env_logger = "0.10"
glam = { version = "0.24", features = ["bytemuck"] }
pollster = "0.3"
wgpu = "0.17"
winit = "0.28"
