[package]
name = "invoke-xor-tile"
version = "0.1.0"
edition = "2021"
authors = ["Alex Komissarov <k.a.komissar@gmail.com>"]
license = "MIT"
description = "Xor example from the repo Vokselis."
repository = "https://github.com/pudnax/vokselis/"
readme = "README.md"
keywords = ["graphics", "voxels", "wgpu", "shaders", "creative"]
exclude = [".gitignore", "examples", ".github"]
categories = ["graphics", "rendering"]

[dependencies]
invoke-selis = { path = "../../invoke-selis" }

bytemuck = { version = "1.7", features = ["derive"] }
color-eyre = "0.6"
wgpu = "0.16"
winit = "0.28"
