[package]
name = "xor_single"
version = "0.1.0"
edition = "2021"
authors = ["Alex Komissarov <k.a.komissar@gmail.com>"]
license = "MIT"
description = "Xor example from the repo Vokselis (single pass)."
repository = "https://github.com/pudnax/vokselis/"
readme = "README.md"
keywords = ["graphics", "voxels", "wgpu", "shaders", "creative"]
exclude = [".gitignore", "examples", ".github"]
categories = ["graphics", "rendering"]

[dependencies]
vokselis = { path = "../../../vokselis_fork_without_nightly" }

bytemuck = { workspace = true }
wgpu = { workspace = true }
winit = { workspace = true }
